<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Turbo Share</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitial_ad_unit" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="developer">Pharid Codecanyon</string>
    <string name="text_navigationDrawerOpen">Open navigation drawer</string>
    <string name="text_navigationDrawerClose">Close navigation drawer</string>
    <string name="text_preferences">Preferences</string>
    <string name="mesg_scanningDevices">Finding nearby devices</string>
    <string name="ques_receiveFile">Receive the file?</string>
    <string name="butn_accept">Accept</string>
    <string name="butn_reject">Reject</string>
    <string name="butn_stop">Stop</string>
    <string name="text_sending">Sending</string>
    <string name="butn_cancelSending">Cancel sending</string>
    <string name="text_receiving">Receiving</string>
    <string name="butn_cancelReceiving">Cancel receiving</string>
    <string name="mesg_fileReceived">%s has been received</string>
    <string name="butn_scan">Scan</string>
    <string name="text_listEmpty">No items</string>
    <string name="text_developerMode">Developer mode</string>
    <string name="text_developerModeSummary">Disables the user configuration</string>
    <string name="text_deviceName">Device name</string>
    <string name="text_deviceNameSummary">This name will be shown on other devices</string>
    <string name="text_deviceNameTitle">Enter a device name</string>
    <string name="mesg_formatNotSupported">Unsupported format</string>
    <string name="mesg_fileReceiveError">Could not receive %s.</string>
    <string name="text_deviceList">Devices</string>
    <string name="text_fileShareAppChoose">Choose an app to share with</string>
    <string name="ques_resetToDefault">Reset to default?</string>
    <string name="butn_edit">Edit</string>
    <string name="butn_delete">Delete</string>
    <string name="text_deleteConfirm">Confirm deletion</string>
    <string name="butn_cancel">Cancel</string>
    <string name="butn_refresh">Refresh</string>
    <string name="butn_close">Close</string>
    <string name="text_deviceModelInfo">Device name</string>
    <string name="butn_shareWithTurboShare">Share with Turbo Share</string>
    <string name="mesg_somethingWentWrong">Something went wrong</string>
    <string name="text_findDevicesHint">No familiar devices</string>
    <string name="mesg_stillScanning">Still scanning</string>
    <string name="text_advanced">Advanced</string>
    <string name="text_storagePath">Storage path</string>
    <string name="text_storagePathSummary">New files will be saved to this folder</string>
    <string name="text_allowToConnect">Allow to connect</string>
    <string name="text_connectionPermission">Connection permission</string>
    <string name="ques_allowDeviceToConnect">Let this device connect?</string>
    <string name="mesg_stopping">Stopping</string>
    <string name="text_notification">Notification</string>
    <string name="text_useSounds">Sounds</string>
    <string name="text_useSoundsSummary">Use sounds</string>
    <string name="text_useVibration">Vibration and heads-up notifications</string>
    <string name="text_useVibrationSummary">Use vibration and show heads-up notifications</string>
    <string name="text_useLights">Lights</string>
    <string name="text_useLightSummary">Use lights</string>
    <string name="mesg_scanCompleted">Scan completed</string>
    <string name="text_application">App</string>
    <string name="text_image">Image</string>
    <string name="text_music">Music</string>
    <string name="text_video">Video</string>
    <string name="text_showSystemApps">Show system apps</string>
    <string name="text_showSystemAppsSummary">Show system apps in \"Share\" section</string>
    <string name="butn_showSystemApps">Show system apps</string>
    <string name="mesg_notAllowed">You are not allowed</string>
    <string name="butn_multiSelect">Multi selection</string>
    <string name="butn_receive">Receive</string>
    <string name="text_aboutSummary">This software is developed by the Pharid International.</string>
    <string name="butn_appLaunch">Launch</string>
    <string name="ques_launchApplication">Do you want to launch this app?</string>
    <string name="mesg_launchApplicationError">This app cannot be launched</string>
    <string name="mesg_textCopiedToClipboard">Text copied to clipboard</string>
    <string name="ques_copyToClipboard">Copy to clipboard?</string>
    <string name="text_textReceived">Text received</string>
    <string name="text_receivedTextSummary">Received clipboard text</string>
    <string name="text_typeText">Write something to send…</string>
    <string name="text_textEditor">Text editor</string>
    <string name="butn_done">Done</string>
    <string name="text_empty">(empty)</string>
    <string name="text_textStream">Text stream</string>
    <string name="butn_wifiSettings">Wi-Fi</string>
    <string name="text_pendingTransfers">Pending transfers</string>
    <string name="text_stopping">Stopping!</string>
    <string name="text_cancellingTransfer">Canceling job…</string>
    <string name="butn_killNow">Kill now</string>
    <string name="mesg_groupOngoingNotice">Waiting for %s to finish before transferring this file</string>
    <string name="butn_proceed">Proceed</string>
    <string name="ques_removeTransfer">Remove transfer?</string>
    <string name="butn_remove">Remove</string>
    <string name="ques_removeDevice">Remove this device?</string>
    <string name="text_removeDeviceNotice">When you remove a device, its transfers will also be removed</string>
    <string name="text_removeTransferSummary">This will remove %s from the queue</string>
    <string name="ques_removeAll">Remove all?</string>
    <string name="text_removeTransferGroupSummary">This will remove all pending transfers you see here</string>
    <string name="text_availableNetworks">Choose network - %s</string>
    <string name="text_noNetworkAvailable">No network available</string>
    <string name="text_folder">Folder</string>
    <string name="mesg_organizingFiles">Organising your files</string>
    <string name="text_communicationService">Communication service</string>
    <string name="text_chooserTargetService">Device choice provider</string>
    <string name="text_transactionViewer">View transaction</string>
    <string name="text_error">Error</string>
    <string name="butn_saveTo">Save to</string>
    <string name="mesg_secureExit">Press again to exit</string>
    <string name="butn_create">Create</string>
    <string name="text_createFolder">Create folder</string>
    <string name="mesg_folderCreateError">Folder could not be created</string>
    <string name="text_requestPermissionStorageSummary">This permission allows Turbo Share to read and write to your
        device\'s storage for receiving and sharing files.
    </string>
    <string name="butn_settings">Settings</string>
    <string name="mesg_currentPathUnavailable">This folder cannot be used</string>
    <string name="text_defaultFolder">Default Folder</string>
    <string name="text_storage">Storage</string>
    <string name="text_shareFiles">Share files</string>
    <string name="mesg_pathSaved">The directory has been saved</string>
    <string name="butn_search">Search</string>
    <string name="butn_changeConnection">Change connection</string>
    <string name="text_fileName">File name</string>
    <string name="text_fileSize">File size</string>
    <string name="text_fileMime">File type</string>
    <string name="text_fileStatus">File status</string>
    <string name="text_transactionDetails">Details</string>
    <string name="text_fileExplorer">File explorer</string>
    <string name="butn_createFolder">Create folder</string>
    <string name="text_chooseFolder">Choose folder</string>
    <string name="text_chooseFile">Choose file</string>
    <string name="mesg_pathSameError">You can not select the old folder</string>
    <string name="ques_checkOldFiles">Move files?</string>
    <string name="text_checkOldFiles">Already saved files can be moved to this folder. You will not see them in the see
        them in the same folder if you don\'t move them.
    </string>
    <string name="mesg_newFilesReceived">New files have been received</string>
    <string name="butn_show">Show</string>
    <string name="text_preparingFiles">Preparing files</string>
    <string name="text_savingDetails">Saving details</string>
    <string name="text_version">Version</string>
    <string name="text_flagPending">Pending</string>
    <string name="text_flagRunning">Running</string>
    <string name="text_flagInterrupted">Interrupted</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_longAgo">Long ago</string>
    <string name="text_interfaceWifiDirect">Wi-Fi Direct</string>
    <string name="text_interfaceWireless">Wi-Fi</string>
    <string name="text_interfaceBluetooth">Bluetooth</string>
    <string name="text_interfaceEthernet">Ethernet</string>
    <string name="text_interfaceUnknown">Unknown connection</string>
    <string name="text_shareTextShort">Text</string>
    <string name="text_automaticNetworkConnectionFailed">Could not connect the device. Its address may have changed. Try
        reconnecting to the network while Turbo Share is open.
    </string>
    <string name="text_automaticNetworkConnectionOngoing">Choosing the best connection</string>
    <string name="butn_retryReceiving">Retry receiving</string>
    <string name="butn_ask">Ask</string>
    <string name="text_requestPermissionStorage">Storage permission</string>
    <string name="text_emulatedMediaDirectory">Emulated (%s)</string>
    <string name="mesg_notEnoughSpace">Not enough space</string>
    <string name="text_savePath">Save path</string>
    <string name="text_flagRemoved">Removed</string>
    <string name="butn_copyToClipboard">Copy to clipboard</string>
    <string name="text_communicationServiceRunning">Turbo Share can share files now</string>
    <string name="text_communicationServiceStop">Tap to end session</string>
    <string name="text_remainingTime">ETA %s</string>
    <string name="butn_showFiles">Show files</string>
    <string name="butn_trustDevice">Trust this device</string>
    <string name="butn_download">Download</string>
    <string name="mesg_clipboardUpdateNotice">Revise the text or press again to exit</string>
    <string name="mesg_textSaveNotice">Save the text or press again to exit</string>
    <string name="butn_update">Update</string>
    <string name="butn_save">Save</string>
    <string name="text_networkServiceDiscovery">Enable NSD</string>
    <string name="text_networkServiceDiscoverySummary">Network Service Discovery improves discoverability</string>
    <string name="text_killServiceAfterLeavingSummary">Stops communication if there is no ongoing task</string>
    <string name="text_killServiceAfterLeaving">Leaving the app stops the service</string>
    <string name="text_loadThumbnails">Load thumbnails</string>
    <string name="text_loadThumbnailsSummary">Show thumbnails for files</string>
    <string name="const_text_useAppFonts">Apply the recommended font</string>
    <string name="const_text_useAppFontsSummary">Use the supplied custom font</string>
    <string name="text_amoledOptimizedBlackTheme">Optimize for AMOLED Screens</string>
    <string name="text_amoledOptimizedBlackThemeSummary">Use darker colors</string>
    <string name="text_twoRowLayout">Two-row layout</string>
    <string name="text_twoRowLayoutSummary">Display two rows next to each other</string>
    <string name="text_uiTheme">Theme</string>
</resources>