<?xml version="1.0" encoding="utf-8"?>


<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory android:title="@string/text_advanced">
        <androidx.preference.CheckBoxPreference
                android:defaultValue="true"
                android:key="load_thumbnails"
                android:summary="@string/text_loadThumbnailsSummary"
                android:title="@string/text_loadThumbnails"/>

        <androidx.preference.CheckBoxPreference
                android:defaultValue="true"
                android:key="kill_service_on_exit"
                android:summary="@string/text_killServiceAfterLeavingSummary"
                android:title="@string/text_killServiceAfterLeaving"/>

        <androidx.preference.CheckBoxPreference
                android:defaultValue="true"
                android:key="nsd_enabled"
                android:summary="@string/text_networkServiceDiscoverySummary"
                android:title="@string/text_networkServiceDiscovery"/>

        <androidx.preference.CheckBoxPreference
                android:defaultValue="false"
                android:key="developer_mode"
                android:summary="@string/text_developerModeSummary"
                android:title="@string/text_developerMode"/>

        <androidx.preference.CheckBoxPreference
                android:defaultValue="false"
                android:key="show_system_apps"
                android:summary="@string/text_showSystemAppsSummary"
                android:title="@string/text_showSystemApps"/>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>