<?xml version="1.0" encoding="utf-8"?>


<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                                      xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.ListPreference
            android:defaultValue="light"
            android:key="theme"
            android:title="@string/text_uiTheme"
            android:summary="%s"
            android:icon="@drawable/ic_palette_white_24dp"/>

    <androidx.preference.CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_invert_colors_black_24dp"
            android:key="amoled_theme"
            android:summary="@string/text_amoledOptimizedBlackThemeSummary"
            android:title="@string/text_amoledOptimizedBlackTheme"/>

    <androidx.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="custom_fonts"
            android:title="@string/const_text_useAppFonts"
            app:icon="@drawable/ic_short_text_white_24dp"/>

    <androidx.preference.CheckBoxPreference
            android:defaultValue="@bool/genfw_screen_isLarge"
            android:icon="@drawable/ic_view_column_white_24dp"
            android:key="two_row_layout"
            android:summary="@string/text_twoRowLayoutSummary"
            android:title="@string/text_twoRowLayout"
            app:isPreferenceVisible="@bool/genfw_screen_isLarge"/>

</androidx.preference.PreferenceScreen>